Reloading 'text' file in 'Scripting' marks the file as modified #69486

Closed
opened 2019-09-04 13:20:22 +02:00 by Richard Musil · 4 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1080 Ti

Blender Version
Blender 2.80 (sub 75) (hash f6cb5f5449 built 2019-07-29 09:44 AM)

Short description of error
When for example Python script file is linked to Blender workspace as 'text' object, (e.g. by using 'Scripting' -> 'open text') then the original file is modified on the disk outside of Blender, Blender detects it when getting focus and shows a red "book" icon which offers "Reload" | "Make internal" | "Ignore".
When "Reload" is selected, the text object is updated with the new file content, but at the same time marked as modified (asterisk next to the file name in the status bar of the Scripting window).

The only way to "unmodify" it is to save the file back (Alt+S on Windows).

I expect that reloading from the disk should not mark the file with asterisk, which I read as the file has been modified, because the reload should guarantee the opposite - the file in Blender and on the disk are exactly the same.

Exact steps for others to reproduce the error

  • Add text file via Scripting -> open text
  • Modify the file outside Blender
  • Choose "Reload from the disk"
  • Check the status in the status bar.
**System Information** Operating system: Windows 10 Graphics card: GTX 1080 Ti **Blender Version** Blender 2.80 (sub 75) (hash f6cb5f54494e built 2019-07-29 09:44 AM) **Short description of error** When for example Python script file is linked to Blender workspace as 'text' object, (e.g. by using 'Scripting' -> 'open text') then the original file is modified on the disk outside of Blender, Blender detects it when getting focus and shows a red "book" icon which offers "Reload" | "Make internal" | "Ignore". When "Reload" is selected, the text object is updated with the new file content, but at the same time marked as modified (asterisk next to the file name in the status bar of the Scripting window). The only way to "unmodify" it is to save the file back (Alt+S on Windows). I expect that reloading from the disk should not mark the file with asterisk, which I read as the file has been modified, because the reload should guarantee the opposite - the file in Blender and on the disk are exactly the same. **Exact steps for others to reproduce the error** - Add text file via Scripting -> open text - Modify the file outside Blender - Choose "Reload from the disk" - Check the status in the status bar.
Author

Added subscriber: @risa2000

Added subscriber: @risa2000
Dalai Felinto changed title from reloading 'text' file in 'Scripting' marks the file as modified to Reloading 'text' file in 'Scripting' marks the file as modified 2019-09-17 18:15:01 +02:00

Added subscriber: @pedroreis.ad

Added subscriber: @pedroreis.ad

This issue was referenced by fb6ef2ec8d

This issue was referenced by fb6ef2ec8d0367e5d3433787561ee56773f9bee3
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Jacques Lucke self-assigned this 2019-09-20 12:48:41 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69486
No description provided.