Fix T69486: Reloading file in text editor marks file as modified

Differential Revision: https://developer.blender.org/D5847